--- a/services/process-manager/Dockerfile
+++ b/services/process-manager/Dockerfile
@@ -1,3 +1,18 @@
 FROM signavio-on-premise.jfrog.io/process-manager:latest
 
+# OPTIONAL STEP: Add your referenced keystore file here:
+
 # COPY spm_keystore.pkcs12 /usr/share/tomcat/conf/spm_keystore.pkcs12
+
+
+# OPTIONAL STEP: Add your custom jdbc driver to the lib directory.
+# Uncomment then next line and adjust it accordingly:
+
+# COPY mssql-jdbc-8.2.2.jre8.jar /usr/share/tomcat/lib/mssql-jdbc-8.2.2.jre8.jar
+
+
+# OPTIONAL STEP: The Tomcat server will be configured with confd using the setup.env file.
+# If you still want to overwrite the generated tomcat conf files (e.g. server.xml) with your custom config,
+# you can uncomment the next line and add your custom configuration files into the tomcat_conf folder:
+
+# ADD tomcat_conf /tomcat_conf
