--- a/services/process-manager/setup.env
+++ b/services/process-manager/setup.env
@@ -8,6 +8,22 @@ TOMCAT_COMPRESSION=true
 SERVER_ENABLE_ACCESS_LOGS=false
 SERVER_SHOW_ERROR_PAGES=false
 
+# HTTPS/SSL
+
+# SERVER_COMPRESSION=true
+
+# DEFAULT HTTP/1.1
+# SERVER_PROTOCOL=
+
+# SERVER_SSL=true
+
+# DEFAULT TLSv1+TLSv1.1+TLSv1.2
+# SERVER_SSL_PROTOCOL=
+
+# SERVER_KEYSTORE_TYPE=
+# SERVER_KEYSTORE_FILE=
+# SERVER_KEYSTORE_PASS=
+
 
 # tomcat-users.xml
 # users separated by "," and username and password separated by ":"
@@ -22,24 +38,25 @@ TOMCAT_CONTEXT_JARS_TO_SKIP=pdq.jar
 
 # context.xml ------------------------
 
-# MYSQL
+# org.apache.catalina.session.JDBCStore - MYSQL
 JDBC_STORE_DRIVER=com.mysql.jdbc.Driver
 JDBC_STORE_DIALECT=org.hibernate.dialect.MySQL5InnoDBDialect
 JDBC_STORE_URL=jdbc:mysql://spm-db/tomcatsession?useSSL=false
 JDBC_STORE_USER=root
 JDBC_STORE_PASSWORD=password
 
-# MSSQL
+# org.apache.catalina.session.JDBCStore - MSSQL
 # JDBC_STORE_DRIVER=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # JDBC_STORE_DIALECT=com.signavio.hibernate.dialect.CustomSQLServerDialect
-# JDBC_STORE_URL=jdbc:sqlserver://spm-db/tomcatsession?useSSL=false
+# JDBC_STORE_URL=jdbc:sqlserver://spm-db;databaseName=tomcatsession
 # JDBC_STORE_USER=sa
-# JDBC_STORE_PASSWORD=Signavio2020
+# JDBC_STORE_PASSWORD=password
 
 # configuration.xml ------------------
 
 # public host of spm (all external communication)
 SERVER=http://spm.on-prem.localhost:8080
+
 PLATFORM_HOST_FOR_INTERNAL_COMMUNICATION=http://spm.on-prem.localhost:8080
 IS_TEST_SYSTEM=false
 TEST_GENERATED_SVG=false
@@ -51,7 +68,7 @@ USE_PERSISTENT_QUARTZ_STORE=true
 ENABLE_MAILING_SERVICE_JMX=false
 MAILING_SERVICE_JMX_PORT=7999
 
-# MYSQL 
+# DATABASE - MYSQL 
 
 JDBC_DRIVER=com.mysql.jdbc.Driver
 JDBC_DIALECT=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -59,15 +76,15 @@ JDBC_URL=jdbc:mysql://spm-db/platform?useSSL=false
 JDBC_USERNAME=root
 JDBC_PASSWORD=password
 
-# MSSQL
+# DATABASE - MSSQL
 
 # JDBC_DRIVER=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # JDBC_DIALECT=com.signavio.hibernate.dialect.CustomSQLServerDialect
-# JDBC_URL=jdbc:sqlserver://spm-db/platform?useSSL=false
-# JDBC_USERNAME=root
+# JDBC_URL=jdbc:sqlserver://spm-db;databaseName=platform
+# JDBC_USERNAME=sa
 # JDBC_PASSWORD=password
 
-# ORACLE
+# DATABASE - ORACLE
 
 # JDBC_DRIVER=oracle.jdbc.driver.OracleDriver
 # JDBC_DIALECT=org.hibernate.dialect.Oracle10gDialect
@@ -75,9 +92,11 @@ JDBC_PASSWORD=password
 # JDBC_USERNAME=root
 # JDBC_PASSWORD=password
 
+# ARCHIVE DB
+
 # ARCHIVE_JDBC_DRIVER=com.mysql.jdbc.Driver
 # ARCHIVE_JDBC_DIALECT=org.hibernate.dialect.MySQL5InnoDBDialect
-# ARCHIVE_JDBC_URL=jdbc:mysql://mysql-spm/archive?useSSL=false
+# ARCHIVE_JDBC_URL=jdbc:mysql://spm-db/archive?useSSL=false
 # ARCHIVE_JDBC_USERNAME=root
 # ARCHIVE_JDBC_PASSWORD=password
 
@@ -95,7 +114,10 @@ ENGINE_THREAD_COUNT=2
 LOG_LEVEL=ERROR
 
 # LDAP_HOST=YOUR_LDAP_HOST
+
+# Search roots separated by ";"
 # LDAP_SEARCH_ROOTS=CN=Users,DC=company,DC=com;CN=Groups,DC=company,DC=com
+
 # LDAP_MODELER_SSO_SUPPORTED=BOOLEAN_VALUE
 # LDAP_DIALECT=ACTIVE_DIRECTORY
 # LDAP_SSO_MODE=KERBEROS
@@ -103,10 +125,10 @@ LOG_LEVEL=ERROR
 # LDAP_PASSWORD=PASSWORD
 # LDAP_ADMIN_MAIL=admin@company.com
 
-SIGNAVIO_CA_CERT_SHA2_PATH=/usr/share/tomcat/conf/spm_keystore.pkcs12
-SIGNAVIO_CA_CERT_SHA2_ALIAS=spm
-SIGNAVIO_CA_CERT_SHA2_PASSWORD=password
-IS_VALIDATION_ONLY_VERT_SHA2=false
+# SIGNAVIO_CA_CERT_SHA2_PATH=/usr/share/tomcat/conf/spm_keystore.pkcs12
+# SIGNAVIO_CA_CERT_SHA2_ALIAS=spm
+# SIGNAVIO_CA_CERT_SHA2_PASSWORD=password
+# IS_VALIDATION_ONLY_VERT_SHA2=false
 
 MAX_DIAGRAM_COUNT=250
 EXTENDED_MAX_DIAGRAM_COUNT=10000
@@ -170,10 +192,9 @@ GRE_CAPTCHA_SITE_SECRET=
 HUB_SPOT_POST_URL=
 
 # Configuration signed - read from configuration_signed.xml
-
 CONFIGURATION_SIGNED=
 
-# Simulation -------------------------
+# simulation.xml -------------------------
 
 SIMULATION_HOST=
 SIMULATION_PATH=
