update example cert, Dockerfile adjustments

--- a/services/https-apache/httpd-ssl-extension.conf
+++ b/services/https-apache/httpd-ssl-extension.conf
@@ -8,8 +8,8 @@
 
         SSLEngine on
 
-        SSLCertificateFile      "/etc/ssl/certs/signavio/docker.signavio.crt"
-        SSLCertificateKeyFile   "/etc/ssl/certs/signavio/docker.signavio.key"
+        SSLCertificateFile      "/etc/ssl/certs/signavio/localhost.crt"
+        SSLCertificateKeyFile   "/etc/ssl/certs/signavio/localhost.key"
 
 
         <FilesMatch "\.(cgi|shtml|phtml|php)$">
