--- a/services/process-manager/Dockerfile
+++ b/services/process-manager/Dockerfile
@@ -1,10 +1,5 @@
 FROM signavio-on-premise.jfrog.io/process-manager:latest
 
-# OPTIONAL STEP: Add your referenced keystore file here:
-
-# COPY spm_keystore.pkcs12 /usr/share/tomcat/conf/spm_keystore.pkcs12
-
-
 # OPTIONAL STEP: Add your custom jdbc driver to the lib directory.
 # Uncomment then next line and adjust it accordingly:
 
@@ -14,5 +9,6 @@ FROM signavio-on-premise.jfrog.io/process-manager:latest
 # OPTIONAL STEP: The Tomcat server will be configured with confd using the setup.env file.
 # If you still want to overwrite the generated tomcat conf files (e.g. server.xml) with your custom config,
 # you can uncomment the next line and add your custom configuration files into the tomcat_conf folder:
+# OPTIONAL STEP: Add your referenced SSL keystore file in the tomcat_env folder
 
 # ADD tomcat_conf /tomcat_conf
