--- a/services/process-manager/setup.env
+++ b/services/process-manager/setup.env
@@ -152,7 +152,7 @@ TRACKING_SERVER=
 # EFFECTIF_USER_PW=mySecretPassword
 # EFFECTIF_API_VERSION=V3
 
-SOLR_URL=http://localhost:8080/solr
+SOLR_URL=http://solr.on-prem.localhost:8983/solr
 SOLR_CORE=signavioIndex
 SOLR_USE_CONCURRENT_UPDATER=false
 SOLR_UPDATE_BATCH_SIZE=100
